--- a/MyWeb/src/main/webapp/WEB-INF/web.xml
+++ b/MyWeb/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,10 @@
 	<!-- 변경하자 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/appServlet/DB-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/appServlet/DB-context.xml
+			/WEB-INF/spring/appServlet/security-context.xml
+		</param-value>
 	</context-param>
 	
 	<!-- 스프링 설정파일 시작 -->
@@ -53,6 +56,18 @@
 	    <url-pattern>/*</url-pattern>
   	</filter-mapping>
 	
+	<!-- 시큐리티 -->
+	<!-- 적용시 에러가 발생한다면, bean이 제대로 생성되지 않았기 때문이다.  -->
+	<!-- 1.context-param에 추가해서 스프링시작시 로드시키도록 설정합니다 -->
+	<!-- 2.security설정 파일에 최소한의 설정을 하도록 처리 -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>	
 	
 	
 </web-app>
