--- a/MyWeb/src/main/webapp/WEB-INF/web.xml
+++ b/MyWeb/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,7 @@
 			<param-value>
 				/WEB-INF/spring/appServlet/servlet-context.xml
 				/WEB-INF/spring/appServlet/intercepter-context.xml
+				/WEB-INF/spring/appServlet/aop-context.xml
 			</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
